[project]
name = "geohash-polygon-py"
version = "0.1.0"
description = "A python implementation to find the geohashes inside a polygon."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
